--- a/src/main/resources/templates/emailtemplate/admin_access_request.html
+++ b/src/main/resources/templates/emailtemplate/admin_access_request.html
@@ -22,8 +22,8 @@
  
     <table align="center" border="0" cellpadding="0" cellspacing="0" width="800"  style="border-collapse: collapse;">
         <tr>
-            <td align="center" bgcolor="#f6f6f6" style="padding: 40px 0 30px 0;">
-                <img src="cid:logo.png" alt="https://www.alpha.com" style="display: block;" />
+              <td align="center" bgcolor="#f6f6f6"  >
+              <img src="cid:logo.png" alt="https://www.alpha.com" style="display: block;" />
             </td>
         </tr>
         <tr>
