--- a/src/main/resources/templates/emailtemplate/registration.html
+++ b/src/main/resources/templates/emailtemplate/registration.html
@@ -26,10 +26,8 @@
  
     <table align="center" border="0" cellpadding="0" cellspacing="0" width="800"  style="border-collapse: collapse;">
         <tr>
-            <td align="center" bgcolor="#f6f6f6" style="padding: 40px 0 30px 0;">
-           <!--    <img src="cid:logo.png" alt="https://www.alpha.com" style="display: block;" /> --> 
-           <img th:src="@{images/logo.png}"  alt="https://www.alpha.com" style="display: block;" />
-          <!--    <img src="../logo.png" th:src="@{/logo.png}" th:title="#{logo}" th:alt="#{logo}" /> --> 
+            <td align="center" bgcolor="#f6f6f6"  >
+              <img src="cid:logo.png" alt="https://www.alpha.com" style="display: block;" />
             </td>
         </tr>
         <tr>
